Fix some search bar layout bugs

--- a/addons/editor-searchable-dropdowns/userscript.css
+++ b/addons/editor-searchable-dropdowns/userscript.css
@@ -1,5 +1,4 @@
 .u-dropdown-searchbar {
-  width: 100%;
   box-sizing: border-box;
   /* based on styles for the title input */
   color: white;
